examples/test/testpolicy4853.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4853
  namespace: namespace424
spec:
  podSelector:
    matchLabels:
      key25: value7
      key21: value4
      key6: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value15
      podSelector:
        matchLabels:
          key16: value18
          key29: value4
          key15: value12
